fix dark mode recognition

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -42,7 +42,7 @@
 /* don't bother with sidebar in light mode */
 
 /* dark mode */
-:root:-moz-lwtheme-brighttext,
+:root[lwtheme-brighttext],
 :root[privatebrowsingmode='temporary'] {
   /* accentcolor */
   --lwt-accent-color: #202124 !important;
@@ -153,10 +153,15 @@
     var(--arrowpanel-menuitem-padding-inline) !important;
   --arrowpanel-menuitem-border-radius: 0px !important;
 
-  &:-moz-any(:-moz-lwtheme-brighttext, [privatebrowsingmode='temporary']) {
+  &[privatebrowsingmode='temporary'] {
     --toolbar-field-background-color: #202124 !important;
     --toolbar-field-hover-background-color: #292a2d !important;
     --toolbar-field-focus-background-color: #202124 !important;
+
+    & :is(#urlbar, #searchbar) {
+      --toolbarbutton-hover-background: hsl(206, 5%, 26%) !important;
+      --toolbarbutton-active-background: hsl(210, 4%, 31%) !important;
+    }
   }
 
   &:not(:-moz-lwtheme):not([privatebrowsingmode='temporary']) {
@@ -165,10 +170,15 @@
     --toolbox-border-bottom-color: hsl(0, 0%, 70%) !important;
   }
 
-  &:-moz-any([privatebrowsingmode='temporary'], :-moz-lwtheme-brighttext)
-    :-moz-any(#urlbar, #searchbar) {
-    --toolbarbutton-hover-background: hsl(206, 5%, 26%) !important;
-    --toolbarbutton-active-background: hsl(210, 4%, 31%) !important;
+  @media (prefers-color-scheme: dark) {
+    --toolbar-field-background-color: #202124 !important;
+    --toolbar-field-hover-background-color: #292a2d !important;
+    --toolbar-field-focus-background-color: #202124 !important;
+
+    & :is(#urlbar, #searchbar) {
+      --toolbarbutton-hover-background: hsl(206, 5%, 26%) !important;
+      --toolbarbutton-active-background: hsl(210, 4%, 31%) !important;
+    }
   }
 }
 
